--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Conceptos basicos JS</title>
 </head>
 <body>
-    <script src="js/ejercicio6.js"></script>
+    <script src="js/2-condicionales.js"></script>
 
 </body>
 </html>
